🤖 feat: 메인 단 페이지 완료 중간 보고 및 커밋

--- a/index.html
+++ b/index.html
@@ -4,35 +4,140 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>shop</title>
+    <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <style>
-      nav {
-        display: flex;
-        justify-content: center;
-        background-color: #444;
-        padding: 10px;
-      }
-
-      nav a {
-        color: white;
-        text-decoration: none;
-        padding: 10px 20px;
-        margin: 0 10px;
-        border-radius: 5px;
-        transition: background-color 0.3s;
-      }
-
-      nav a:hover {
-        background-color: #555;
-      }
-    </style>
   </head>
   <body>
-    <nav>
-      <a href="#">홈</a>
-      <a href="#">서비스</a>
-      <a href="#">포트폴리오</a>
-      <a href="#">문의</a>
-    </nav>
+    <!-- 상단 바 -->
+    <header>
+      <div class="logo">
+        <p>BT</p>
+      </div>
+      <nav class="shop-nav">
+        <a href="#">Fashion</a>
+        <a href="#">Make Up</a>
+        <a href="#">Accessory</a>
+        <a href="#">검색</a>
+      </nav>
+      <nav class="shop-nav__info">
+        <a href="#">MY</a>
+        <a href="#">Login</a>
+      </nav>
+    </header>
+    <!-- 메인 -->
+    <div class="wrap">
+      <!-- 케러셀 적용 x -->
+      <div class="shop__header--photoBox">
+        <img
+          src="https://img.etnews.com/news/article/2021/10/02/cms_temp_article_02224619369582.png"
+          alt="mainPhoto"
+        />
+      </div>
+      <!-- 좌측 -->
+      <div class="shop__main--box">
+        <div class="shop__main--styleBox">
+          <div class="shop__main--seasonBox">
+            <div class="shop__code--titleBox">
+              <p>계절 유행 STYLE</p>
+              <a href="#">더보기</a>
+            </div>
+            <div class="shop__code--Box">
+              <div class="shop__code--product">
+                <img
+                  src="https://m.gifteabox.com/web/product/big/202209/9ba87936e31b29ebdd3769ff8e9c226f.jpg"
+                  alt="code-image"
+                />
+                <p class="shop__code--content">가을 코디</p>
+              </div>
+              <div class="shop__code--product">
+                <img
+                  src="https://m.gifteabox.com/web/product/big/202209/9ba87936e31b29ebdd3769ff8e9c226f.jpg"
+                  alt="code-image"
+                />
+                <p class="shop__code--content">초 가을 바람 막이</p>
+              </div>
+              <div class="shop__code--product">
+                <div class="shop__code--ready">
+                  <p>상품 준비중</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="shop__main--axeBox">
+            <div class="shop__code--titleBox">
+              <p>지금 뜨는 액세서리</p>
+              <a href="#">더보기</a>
+            </div>
+            <div class="shop__code--Box">
+              <div class="shop__code--product">
+                <img
+                  src="https://m.gifteabox.com/web/product/big/202209/9ba87936e31b29ebdd3769ff8e9c226f.jpg"
+                  alt="code-image"
+                />
+                <p class="shop__code--content">가을 코디</p>
+              </div>
+              <div class="shop__code--product">
+                <img
+                  src="https://m.gifteabox.com/web/product/big/202209/9ba87936e31b29ebdd3769ff8e9c226f.jpg"
+                  alt="code-image"
+                />
+                <p class="shop__code--content">초 가을 바람 막이</p>
+              </div>
+              <div class="shop__code--product">
+                <div class="shop__code--ready">
+                  <p>상품 준비중</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- 우측 -->
+        <div class="shop__main--makeUpBox">
+          <div>
+            <div class="shop__main--seasonBox">
+              <div class="shop__code--titleBox">
+                <p>오늘의 메이크업</p>
+                <a href="#">더보기</a>
+              </div>
+              <div class="shop__code--Box">
+                <div class="shop__code--product">
+                  <img
+                    src="https://m.gifteabox.com/web/product/big/202209/9ba87936e31b29ebdd3769ff8e9c226f.jpg"
+                    alt="code-image"
+                  />
+                  <p class="shop__code--content">가을 코디</p>
+                </div>
+                <div class="shop__code--product">
+                  <img
+                    src="https://m.gifteabox.com/web/product/big/202209/9ba87936e31b29ebdd3769ff8e9c226f.jpg"
+                    alt="code-image"
+                  />
+                  <p class="shop__code--content">초 가을 바람 막이</p>
+                </div>
+                <div class="shop__code--product">
+                  <div class="shop__code--ready">
+                    <p>상품 준비중</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="shop__main--axeBox">
+              <div class="shop__code--titleBox">
+                <p>쿠폰 할인받기!</p>
+              </div>
+              <div class="shop__code--Box">
+                <div class="shop__code--product">
+                  <img
+                    src="https://img.freepik.com/premium-vector/various-types-of-coupon-mockups-and-points-illustration-set-dollar-present-paper-free-sale_632180-28.jpg"
+                    alt="code-image"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
