--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               </div>
               <div class="shop__code--product">
                 <img
-                  src="https://m.gifteabox.com/web/product/big/202209/9ba87936e31b29ebdd3769ff8e9c226f.jpg"
+                  src="https://m.youngcode.kr/web/product/big/202109/fae83f9866375e7bc69866a3732ac30b.jpg"
                   alt="code-image"
                 />
                 <p class="shop__code--content">초 가을 바람 막이</p>
@@ -71,22 +71,24 @@
             <div class="shop__code--Box">
               <div class="shop__code--product">
                 <img
-                  src="https://m.gifteabox.com/web/product/big/202209/9ba87936e31b29ebdd3769ff8e9c226f.jpg"
-                  alt="code-image"
+                  src="https://cdn.imweb.me/thumbnail/20220423/47b73dd721574.jpg"
+                  alt="ring-image"
                 />
-                <p class="shop__code--content">가을 코디</p>
+                <p class="shop__code--content">기부 목적 귀걸이</p>
               </div>
               <div class="shop__code--product">
                 <img
-                  src="https://m.gifteabox.com/web/product/big/202209/9ba87936e31b29ebdd3769ff8e9c226f.jpg"
-                  alt="code-image"
+                  src="https://cowx2.cafe24.com/web/product/small/shop1_6eb5e9154055e0c37eb1a8bde6a68326.jpg"
+                  alt="ring-image"
                 />
-                <p class="shop__code--content">초 가을 바람 막이</p>
+                <p class="shop__code--content">블링블링 롱 귀걸이</p>
               </div>
               <div class="shop__code--product">
-                <div class="shop__code--ready">
-                  <p>상품 준비중</p>
-                </div>
+                <img
+                  src="https://webimg.jestina.co.kr/UpData2/item/G2000014656/20211118105325ZM.jpg"
+                  alt="ring-image"
+                />
+                <p class="shop__code--content">이너용 평평 귀걸이</p>
               </div>
             </div>
           </div>
@@ -103,22 +105,24 @@
               <div class="shop__code--Box">
                 <div class="shop__code--product">
                   <img
-                    src="https://m.gifteabox.com/web/product/big/202209/9ba87936e31b29ebdd3769ff8e9c226f.jpg"
-                    alt="code-image"
+                    src="https://mblogthumb-phinf.pstatic.net/MjAyMzAzMDZfMzMg/MDAxNjc4MTA1NTIwNDY0.j7RLMuaEUqEmhDfCIIIPcMJF_q5zV7Ec-oNc2PCuI_Ug.90WZktb3DwK73I6Pg2DqBYWDsxq2f3tB6-AL_rhQdvkg.JPEG.queen3757/%EB%B3%B4%EC%9D%B4%EB%93%9C%EB%B0%94%EC%9D%B4%EB%B0%95%EC%B2%A0_%ED%99%94%EB%B3%B4_%ED%99%9C%EB%B3%B4%EA%B2%BD%EC%9D%80_(14).jpg?type=w800"
+                    alt="make-image"
                   />
-                  <p class="shop__code--content">가을 코디</p>
+                  <p class="shop__code--content">청순 메이크업</p>
                 </div>
                 <div class="shop__code--product">
                   <img
-                    src="https://m.gifteabox.com/web/product/big/202209/9ba87936e31b29ebdd3769ff8e9c226f.jpg"
-                    alt="code-image"
+                    src="https://mblogthumb-phinf.pstatic.net/MjAyMzAxMTBfMjcx/MDAxNjczMzUxODQ5MTgx.oRl0kGwM8SjJztTPAT7QHf6JK52DyRz41l9fsj7xxNwg.XrpYHiArqOPx4Aw8TaNsulUPWmTXT8Q2ZahRhLK8_Usg.PNG.juliawed/MIMM2023_(1).png?type=w800"
+                    alt="make-image"
                   />
-                  <p class="shop__code--content">초 가을 바람 막이</p>
+                  <p class="shop__code--content">글리터로 포인트</p>
                 </div>
                 <div class="shop__code--product">
-                  <div class="shop__code--ready">
-                    <p>상품 준비중</p>
-                  </div>
+                  <img
+                    src="https://www.iwedding.co.kr/center/iweddingb/product/800_co_sl_m209_14018_1636683168_12733300_3232256100.jpg"
+                    alt="make-image"
+                  />
+                  <p class="shop__code--content">강렬한 메이크업</p>
                 </div>
               </div>
             </div>
