🤖 feat: 상세 페이지 디자인 반영 완료

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>BT</p>
       </div>
       <nav class="shop-nav">
-        <a href="#">Fashion</a>
+        <a href="./shop_detail/detail.html">Fashion</a>
         <a href="#">Make Up</a>
         <a href="#">Accessory</a>
         <a href="#">검색</a>
@@ -157,39 +157,6 @@
         </div>
       </div>
     </div>
-    <script>
-      let currentSlide = 0;
-      const slides = document.querySelectorAll(".carousel img");
-      const counter = document.querySelector(".counter");
-
-      function showSlide(index) {
-        if (index < 0) {
-          currentSlide = slides.length - 1;
-        } else if (index >= slides.length) {
-          currentSlide = 0;
-        } else {
-          currentSlide = index;
-        }
-        // 여기를 증가하면 됩니다.
-        const transformValue = -currentSlide * 100 + "%";
-        document.querySelector(".carousel").style.transform =
-          "translateX(" + transformValue + ")";
-        updateCounter();
-      }
-
-      function prevSlide() {
-        showSlide(currentSlide - 1);
-      }
-
-      function nextSlide() {
-        showSlide(currentSlide + 1);
-      }
-
-      function updateCounter() {
-        counter.textContent = currentSlide + 1 + " / " + slides.length;
-      }
-
-      updateCounter();
-    </script>
+    <script src="./script.js"></script>
   </body>
 </html>
