🤹 feat: 세부 페이지 제작 완료

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>BT</p>
       </div>
       <nav class="shop-nav">
-        <a href="./shop_detail/detail.html">Fashion</a>
+        <a href="./shop_detail/detail.html" target="_blank">Fashion</a>
         <a href="#">Make Up</a>
         <a href="#">Accessory</a>
         <a href="#">검색</a>
