--- a/shop_detail/detail.html
+++ b/shop_detail/detail.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>shop_detail</title>
-    <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+
+    <link rel="stylesheet" href="./css/detail.css" />
   </head>
   <body>
     <!-- 상단 바 -->
     <header>
       <div class="logo">
-        <a href="/">BT</a>
+        <a href="../index.html" target="_blank">BT</a>
       </div>
       <nav class="shop-nav">
         <a href="#" id="selected">Fashion</a>
@@ -27,7 +27,9 @@
     <!-- 메인 -->
     <div>
       <div class="box">
-        <h1>계절 유행 STYLE</h1>
+        <a href="../fashion_detail/fashion.html" target="_blank"
+          >계절 유행 STYLE</a
+        >
         <p>게시판</p>
       </div>
       <div class="wrap">
