--- a/fashion_detail/fashion.html
+++ b/fashion_detail/fashion.html
@@ -11,13 +11,13 @@
     <!-- 상단 바 -->
     <header>
       <div class="logo">
-        <a href="../index.html" target="_blank">BT</a>
+        <a href="../index.html">BT</a>
       </div>
       <nav class="shop-nav">
         <a href="#" id="selected">Fashion</a>
         <a href="#">Make Up</a>
         <a href="#">Accessory</a>
-        <a href="#">검색</a>
+        <a href="../shop_search/search.html">검색</a>
       </nav>
       <nav class="shop-nav__info">
         <a href="#">MY</a>
