--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <p>BT</p>
       </div>
       <nav class="shop-nav">
-        <a href="./shop_detail/detail.html" target="_blank">Fashion</a>
+        <a href="./shop_detail/detail.html">Fashion</a>
         <a href="#">Make Up</a>
         <a href="#">Accessory</a>
-        <a href="#">검색</a>
+        <a href="./shop_search/search.html">검색</a>
       </nav>
       <nav class="shop-nav__info">
         <a href="#">MY</a>
