--- a/shop_detail/detail.html
+++ b/shop_detail/detail.html
@@ -11,13 +11,13 @@
     <!-- 상단 바 -->
     <header>
       <div class="logo">
-        <a href="../index.html" target="_blank">BT</a>
+        <a href="../index.html">BT</a>
       </div>
       <nav class="shop-nav">
         <a href="#" id="selected">Fashion</a>
         <a href="#">Make Up</a>
         <a href="#">Accessory</a>
-        <a href="#">검색</a>
+        <a href="../shop_search/search.html">검색</a>
       </nav>
       <nav class="shop-nav__info">
         <a href="#">MY</a>
@@ -27,11 +27,17 @@
     <!-- 메인 -->
     <div>
       <div class="box">
-        <a href="../fashion_detail/fashion.html" target="_blank"
+        <a
+          id="noice__board--non"
+          href="../fashion_detail/fashion.html"
+          target="_blank"
           >계절 유행 STYLE</a
         >
-        <p>게시판</p>
+        <br />
+        <br />
+        <a id="noice__board">게시판</a>
       </div>
+      <!-- 초기에 보이는 fashion -->
       <div class="wrap">
         <div id="photoBox" class="shop__header--photoBox">
           <div class="carousel">
@@ -116,7 +122,117 @@
           </div>
         </div>
       </div>
+      <!-- 게시판 -->
+      <div class="container" style="display: none">
+        <div class="search__box">
+          <div class="search__box--cotainer">
+            <input type="text" placeholder="제목을 입력하세요" />
+            <p class="search__box--icon">&#128269;</p>
+          </div>
+          <button id="notice__detail" class="search--button">등록하기</button>
+        </div>
+        <div class="table__container">
+          <table>
+            <thead>
+              <tr>
+                <th>No</th>
+                <th>등록일</th>
+                <th>제목</th>
+                <th>찜개수</th>
+                <th>등록자</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>13</td>
+                <td>2023.10.01</td>
+                <td>겨울 맞춤코디</td>
+                <td>4 개</td>
+                <td>홍길동</td>
+              </tr>
+              <tr>
+                <td>13</td>
+                <td>2023.10.01</td>
+                <td>겨울 맞춤코디</td>
+                <td>4 개</td>
+                <td>홍길동</td>
+              </tr>
+              <tr>
+                <td>13</td>
+                <td>2023.10.01</td>
+                <td>겨울 맞춤코디</td>
+                <td>4 개</td>
+                <td>홍길동</td>
+              </tr>
+              <tr>
+                <td>13</td>
+                <td>2023.10.01</td>
+                <td>겨울 맞춤코디</td>
+                <td>4 개</td>
+                <td>홍길동</td>
+              </tr>
+              <tr>
+                <td>13</td>
+                <td>2023.10.01</td>
+                <td>겨울 맞춤코디</td>
+                <td>4 개</td>
+                <td>홍길동</td>
+              </tr>
+              <tr>
+                <td>13</td>
+                <td>2023.10.01</td>
+                <td>겨울 맞춤코디</td>
+                <td>4 개</td>
+                <td>홍길동</td>
+              </tr>
+              <tr>
+                <td>13</td>
+                <td>2023.10.01</td>
+                <td>겨울 맞춤코디</td>
+                <td>4 개</td>
+                <td>홍길동</td>
+              </tr>
+              <tr>
+                <td>13</td>
+                <td>2023.10.01</td>
+                <td>겨울 맞춤코디</td>
+                <td>4 개</td>
+                <td>홍길동</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <!-- 게시판 상세보기 -->
+    <div class="notice__detail--box">
+      <h1>게시글 보기</h1>
+      <div class="detail__notice">
+        <div class="detail__notice--button--box">
+          <button class="search--button">찜하기 ♡</button>
+        </div>
+        <div class="info__box--title">
+          <div class="title__box">
+            <p>등록자</p>
+            <input
+              type="text"
+              class="title__box--user"
+              placeholder="홍길동"
+              disabled
+            />
+          </div>
+          <div class="title__box">
+            <p>제목</p>
+            <input
+              type="text"
+              class="title__box--user"
+              placeholder="오늘 제 코디 어때요?"
+            />
+          </div>
+        </div>
+      </div>
     </div>
     <script src="../script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
