🤖 fix: js 주석 해제

--- a/shop_detail/detail.html
+++ b/shop_detail/detail.html
@@ -26,7 +26,7 @@
     </header>
     <!-- 메인 -->
     <div>
-      <div class="box" style="display: none">
+      <div class="box">
         <a
           id="noice__board--non"
           href="../fashion_detail/fashion.html"
@@ -38,7 +38,7 @@
         <a id="noice__board">게시판</a>
       </div>
       <!-- 초기에 보이는 fashion -->
-      <div class="wrap" style="display: none">
+      <div class="wrap">
         <div id="photoBox" class="shop__header--photoBox">
           <div class="carousel">
             <img
@@ -261,6 +261,6 @@
       </div>
     </div>
     <script src="../script.js"></script>
-    <!-- <script src="./script.js"></script> -->
+    <script src="./script.js"></script>
   </body>
 </html>
