🤖 feat: 0109 총 5 페이지 완료

--- a/shop_detail/detail.html
+++ b/shop_detail/detail.html
@@ -20,7 +20,7 @@
         <a href="../shop_search/search.html">검색</a>
       </nav>
       <nav class="shop-nav__info">
-        <a href="#">MY</a>
+        <a href="../shop_my/mypage.html">MY</a>
         <a href="#">Login</a>
       </nav>
     </header>
