--- a/shop_search/search.html
+++ b/shop_search/search.html
@@ -12,7 +12,7 @@
     <!-- 상단 바 -->
     <header>
       <div class="logo">
-        <p>BT</p>
+        <a href="../index.html" id="selected">BT</a>
       </div>
       <nav class="shop-nav">
         <a href="../shop_detail/detail.html">Fashion</a>
@@ -21,7 +21,7 @@
         <a href="#" id="selected">검색</a>
       </nav>
       <nav class="shop-nav__info">
-        <a href="#">MY</a>
+        <a href="../shop_my/mypage.html">MY</a>
         <a href="#">Login</a>
       </nav>
     </header>
